get-started/openshift/microgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: microgateway-svc
spec:
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 0.0.0.0/0
  ports:
  - name: microgateway-https
    port: 443
    targetPort: 8443
    protocol: TCP
  - name: microgateway-http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    name: microgateway

---

apiVersion: v1
kind: Route
metadata:
  name: microgateway
spec:
  host: microgateway.mycompany.com
  port:
    targetPort: microgateway-https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: microgateway-svc
  wildcardPolicy: None

---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: microgateway-dc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: microgateway
    spec:
      strategy:
        type: Rolling
        rollingParams:
          updatePeriodSeconds: 1
          intervalSeconds: 1
          timeoutSeconds: 120
          maxSurge: "20%"
          maxUnavailable: "10%"
          pre: {}
          post: {}

      containers:
      - name: microgateway
        image: caapim/microgateway:1.0.00
        ports:
        - name: https
          containerPort: 8443
          protocol: TCP
        - name: http
          containerPort: 8080
          protocol: TCP

        readinessProbe:
          exec:
            command:
            - /opt/docker/rc.d/diagnostic/health_check.sh
          initialDelaySeconds: 180
          periodSeconds: 5
          timeoutSeconds: 5

        livenessProbe:
          exec:
            command:
            - /opt/docker/rc.d/diagnostic/health_check.sh
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 6
